infra/k8s/posts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: posts-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: posts-deployment
    template:
        metadata:
            labels:
                app: posts-deployment
        spec:
            containers:
                - name: posts-deployment
                  image: blogs-posts:latest
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "500m"
