infra/k8s/posts-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: posts
spec:
    containers:
        - name: posts
          image: blogs-posts:0.1
