infra/k8s/client-deployment.yml
# CLIENT DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: blogs-client:latest
                  imagePullPolicy: Never
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "150m"
                  ports:
                      - containerPort: 5173

---
# CLIENT CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
    name: client-clusterip-service
spec:
    selector:
        app: client
    ports:
        - protocol: TCP
          port: 5173
          targetPort: 5173
