infra/k8s/comments-deployment.yml
# COMMENTS DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: comments-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: comments
    template:
        metadata:
            labels:
                app: comments
        spec:
            containers:
                - name: comments
                  image: blogs-comments:latest
                  imagePullPolicy: Never
                  resources:
                      limits:
                          memory: "64Mi"
                          cpu: "150m"
                  ports:
                      - containerPort: 3002

---
# COMMENTS CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
    name: comments-clusterip-service
spec:
    selector:
        app: comments
    ports:
        - protocol: TCP
          port: 3002
          targetPort: 3002
