infra/k8s/event-bus-deployment.yml
# EVENT BUS DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: event-bus-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: event-bus
    template:
        metadata:
            labels:
                app: event-bus
        spec:
            containers:
                - name: event-bus
                  image: blogs-event-bus:latest
                  imagePullPolicy: Never
                  resources:
                      limits:
                          memory: "64Mi"
                          cpu: "150m"
                  ports:
                      - containerPort: 3005

---
# EVENT BUS CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
    name: event-bus-clusterip-service
spec:
    selector:
        app: event-bus
    ports:
        - protocol: TCP
          port: 3005
          targetPort: 3005
