infra/k8s/moderation-deployment.yml
# MODERATION DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderation-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: moderation
    template:
        metadata:
            labels:
                app: moderation
        spec:
            containers:
                - name: moderation
                  image: blogs-moderation:latest
                  imagePullPolicy: Never
                  resources:
                      limits:
                          memory: "64Mi"
                          cpu: "150m"
                  ports:
                      - containerPort: 3004

---
# MODERATION CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
    name: moderation-clusterip-service
spec:
    selector:
        app: moderation
    ports:
        - protocol: TCP
          port: 3004
          targetPort: 3004
