infra/k8s/posts-service.yml
# POSTS NODEPORT SERVICE
apiVersion: v1
kind: Service
metadata:
    name: posts-nodeport-service
spec:
    type: NodePort
    selector:
        app: posts
    ports:
        - protocol: TCP
          port: 3001
          targetPort: 3001
