infra/k8s/query-deployment.yml
# QUERY DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: query-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: query
    template:
        metadata:
            labels:
                app: query
        spec:
            containers:
                - name: query
                  image: blogs-query:latest
                  imagePullPolicy: Never
                  resources:
                      limits:
                          memory: "64Mi"
                          cpu: "150m"
                  ports:
                      - containerPort: 3003

---
# QUERY CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
    name: query-clusterip-service
spec:
    selector:
        app: query
    ports:
        - protocol: TCP
          port: 3003
          targetPort: 3003
