infra/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
    labels:
        name: ingress
spec:
    rules:
        - host: posts.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/posts/create"
                    backend:
                        service:
                            name: posts-clusterip-service
                            port:
                                number: 3001
                  - pathType: Prefix
                    path: "/posts"
                    backend:
                        service:
                            name: query-clusterip-service
                            port:
                                number: 3003
                  - pathType: Prefix
                    path: "/posts/?(.*)/comments"
                    backend:
                        service:
                            name: comments-clusterip-service
                            port:
                                number: 3002
                  - pathType: Prefix
                    path: "/?(.*)"
                    backend:
                        service:
                            name: client-clusterip-service
                            port:
                                number: 5173
